# tr29124_test

./: .gitignore  .gitmodules  .travis.yml  CL_specfun  CMakeLists.txt  CODE_OF_CONDUCT.md  COULFG.FOR  Doxyfile  E_A_table .csv  E_A_table.py  FAIL.txt  Fadeeva_test.txt  ForwardContinuedFraction.tcc  LambertW.cc  LentzContinuedFraction.tcc  Makefile  Makefile.old  README.md  RUN_COULFG.FOR  RUN_COULFG.TXT  SteedContinuedFraction.tcc  TODO  TR29124 Special Math Functions.odt  airy.tcc  airy_toy.cpp  airy_toy.txt  airy_toy_old.cpp  aitken.f  array_ref  assoc_lag_check_nan.cc  bernoulli.cpp  bessel_function.tcc  beta_function.tcc  beta_inc.cpp  boost_wrap.cpp  boost_wrap.h  build_bernoulli_2n_table.cpp  build_cordic.cpp  build_cordic.txt  build_etam1_table.cpp  (+834 more)
cephes/: CMakeLists.txt  Makefile  maths_cephes.h
cephes/bessel/: Makefile  cephes_bessel.h  jv.c
cephes/c9x-complex/: Makefile  cephes_cmplx.h  protos.h
cephes/cmath/: Makefile  cephes_cmath.h  protos.h  sincos.c
cephes/cprob/: Makefile  cephes_cprob.h  gamma.c  stdtr.c
cephes/ellf/: MSVC.MAK  Makefile  cephes_ellf.h  msvc6.mak
cephes/fft/: 00Need-LinAlg  Makefile  NumMath.dr  fft.h  fft_init.cc  fft_input.cc  fft_output.cc  myenv.cc  myenv.h  vfft.cc
cephes/ldouble/: Makefile  cephes_ldouble.h  setprbor.asm
cephes/misc/: Makefile  cephes_misc.h
cephes/planck/: README  fac.c  makefile  mconf.h  msc.mak  msc6.mak  poly.ps  polylog.c  pow.c  protos.h  rad.ans  rad.c  sin.c  zetac.c
cephes/polyn/: Makefile  cephes_polyn.h  poly_root.cpp
cephes/qfloat/: Makefile
cephes/single/: Makefile
cephes/tarballs/: 128bit.tar.bz2  bessel.tar.bz2  c9x-complex.tar.bz2  cmath.tar.bz2  cprob.tar.bz2  ellf.tar.bz2  eval.tar.bz2  ieee.tar.bz2  ldouble.tar.bz2  linalg.tar.bz2  misc.tar.bz2  ode.tar.bz2  polyn.tar.bz2  qfloat.tar.bz2  remes.tar.bz2  single.tar.bz2
cxx_chebyshev/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md  test_chebyshev.cpp
cxx_chebyshev/test_output/: test_chebyshev.txt
cxx_complex_math/: CMakeLists.txt  test_complex_lerp.cpp  test_complex_midpoint.cpp  test_complex_norms.cpp  test_complex_safe_math.cpp
cxx_complex_math/include/: complex_algorithm.h
cxx_complex_utils/: .gitignore  CMakeLists.txt  test_is_complex.cpp
cxx_continued_fractions/: .gitignore  CMakeLists.txt  Doxyfile  TODO.md  test_continued_fraction.cpp  test_lentz_continued_fraction.cpp  test_steed_continued_fraction.cpp
cxx_differentiation/: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  derivative.tcc  test_derivative.cpp  test_differentiation.cpp  test_differentiation.gsl_opt  test_differentiation.txt
cxx_float128/: CMakeLists.txt
cxx_fp_utils/: .gitignore  CMakeLists.txt  README.md  test_fp_utils.cpp  test_ulp.cpp
cxx_fp_utils/output/: test_ulp.txt
cxx_interval/: .gitignore  CMakeLists.txt  interval  intervaldouble.h  test_interval.cpp
cxx_interval/include/: interval  rounded_cmath.h
cxx_interval/output/: test_interval.txt
cxx_matrix_math/: .gitignore  CMakeLists.txt
cxx_matrix_math/output/: test_matrix.txt  test_vandermonde.txt
cxx_numeric_limits/: CMakeLists.txt  test_numeric_limits.cpp
cxx_rational/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  test_rational.cpp
cxx_root_search/: .gitignore  CMakeLists.txt  Makefile  TODO  test_function.h  test_function.tcc  test_root_search.cpp  test_root_search.txt
cxx_special_functions/: CMakeLists.txt
cxx_special_functions/include/: complex.junk  specfun128.h
cxx_special_functions/test/: CMakeLists.txt  specfun_testcase2.h  testcase.cpp  testcase2.cpp  testcase2.tcc  testcase3.tcc
cxx_summation/: .gitignore  CMakeLists.txt  test_summation.cpp  test_summation.txt
cxx_traits_utils/: .gitignore  CMakeLists.txt  README.md  TODO.md  test_traits_utils.cpp  test_traits_utils.txt
laboratories/: .gitignore  CMakeLists.tmpl  CMakeLists.txt  clean_plot_files.sh  diff_special_function.cpp  plot_fibonacci.gp  test_fibonacci.cpp  test_fibonacci.txt  test_func.tcc  test_maluizhinets.cpp  test_special_function.cpp
laboratories/airy_functions/: .gitignore  CMakeLists.txt  airy.tcc  airy_fock.h  airy_toy.cpp  airy_toy.old  airy_toy_old.cpp  debug_airy.cpp  plot_airy.cpp  plot_airy.gp  plot_airy.sh  plot_airy_fock.gp  plot_airy_new.gp  plot_airy_new.sh  plot_airy_old.gp  plot_airy_scaled.gp  sf_airy_old.tcc  test_airy_fock.cpp  test_airy_fock.txt  test_airy_roots.cpp  test_airy_scaled.cpp  test_little_airy.cpp
laboratories/appell_functions/: .gitignore  CMakeLists.txt  plot_appell.gp  test_appell_f1.cpp
laboratories/basic_functions/: .gitignore  CMakeLists.txt  test_q_number.cpp  test_q_number.txt  test_q_pochhammer.cpp
laboratories/bernoulli_functions/: .gitignore  CMakeLists.txt  build_bernoulli_2n_table.cpp  mpfr_bernoulli.c  plot_bernoulli.gp  (+2 more)
libstdc++_support/: .gitignore  CMakeLists.txt  specfun_stats.h  specfun_testcase.h  specfun_testcase2.h  testcase.cpp  testcase.tcc  testcase2.cpp  testcase2.tcc  testcase3.tcc
quadrature/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TODO  build_clenshaw_curtis.cpp  build_clenshaw_curtis.txt  chebyshev_t_test.cpp  chebyshev_u_test.cpp  chebyshev_v_test.cpp  chebyshev_w_test.cpp  cmake_install.cmake  cquad.txt  cquad_const.h  cquad_const.tcc  cquad_integrate.h  cquad_integrate.tcc  cquad_integrate_new.h  cquad_integrate_old.h  cquad_workspace.h  cquad_workspace_new.h  cquad_workspace_old.h  double_exp_integrate.tcc  err.h  extrapolation_table.h  extrapolation_table.tcc  factorial_table.h  fft.h  fft.tcc  fourier_transform.h  fourier_transform.tcc  gauss_hermite_integrate.h  gauss_jacobi_integrate.h  gauss_jacobi_integrate.tcc  gauss_jacobi_interface.cpp  gauss_jacobi_interface.tcc  gauss_laguerre_integrate.h  gauss_legendre_table.h  gauss_legendre_table.tcc  gcc_help.txt  (+75 more)
wrappers/: .gitignore  CMakeLists.txt  help.txt  wrap_boost.cpp  wrap_boost.h  wrap_burkhardt.cpp  wrap_burkhardt.h  wrap_cephes.cpp  wrap_faddeeva.cpp  wrap_faddeeva.h  wrap_gsl.cpp  wrap_gsl.h  wrap_gst.cpp  wrap_gst.h  wrap_lambert.cpp  wrap_lambert.h  wrap_lerch.cpp  wrap_nric.cpp
(+6095 files in other folders)
