cmake_minimum_required (VERSION 3.2)

project(maths_cephes LANGUAGES CXX C)


add_library(maths_cephes SHARED
            maths_cephes.h
	    bessel/cephes_bessel.h
	    bessel/mconf.h
	    bessel/airy.c
	    bessel/hyp2f1.c
	    bessel/hyperg.c
	    bessel/i0.c
	    bessel/i1.c
	    bessel/iv.c
	    bessel/j0.c
	    bessel/j1.c
	    bessel/jn.c
	    bessel/jv.c
	    bessel/k0.c
	    bessel/k1.c
	    bessel/kn.c
	    bessel/psi.c
	    bessel/struve.c
	    bessel/yn.c
	    cmath/cephes_cmath.h
	    cmath/mconf.h
	    cmath/acosh.c
	    cmath/asin.c
	    cmath/asinh.c
	    cmath/atan.c
	    cmath/atanh.c
	    cmath/cbrt.c
	    cmath/const.c
	    cmath/cosh.c
	    cmath/exp.c
	    cmath/exp10.c
	    cmath/exp2.c
	    cmath/fabs.c
	    cmath/floor.c
	    cmath/isnan.c
	    cmath/log.c
	    cmath/log10.c
	    cmath/log2.c
	    cmath/pow.c
	    cmath/powi.c
	    cmath/round.c
	    cmath/setprec.c
	    cmath/sin.c
	    cmath/sincos.c
	    cmath/sindg.c
	    cmath/sinh.c
	    cmath/sqrt.c
	    cmath/tan.c
	    cmath/tandg.c
	    cmath/tanh.c
	    cmath/unity.c
	    cprob/cephes_cprob.h
	    cprob/mconf.h
	    cprob/bdtr.c
	    cprob/btdtr.c
	    cprob/chdtr.c
	    cprob/drand.c
	    cprob/expx2.c
	    cprob/fdtr.c
	    cprob/gamma.c
	    cprob/gdtr.c
	    cprob/igam.c
	    cprob/igami.c
	    cprob/incbet.c
	    cprob/incbi.c
	    cprob/kolmogorov.c
	    cprob/nbdtr.c
	    cprob/ndtr.c
	    cprob/ndtri.c
	    cprob/pdtr.c
	    cprob/stdtr.c
	    ellf/cephes_ellf.h
	    ellf/mconf.h
	    ellf/ellie.c
	    ellf/ellik.c
	    ellf/ellpe.c
	    ellf/ellpj.c
	    ellf/ellpk.c
	    ldouble/cephes_ldouble.h
	    ldouble/mconf.h
	    ldouble/acoshl.c
	    ldouble/asinl.c
	    ldouble/asinhl.c
	    ldouble/atanl.c
	    ldouble/atanhl.c
	    ldouble/bdtrl.c
	    ldouble/btdtrl.c
	    ldouble/cbrtl.c
	    ldouble/coshl.c
	    ldouble/econst.c
	    ldouble/elliel.c
	    ldouble/ellikl.c
	    ldouble/ellpel.c
	    ldouble/ellpjl.c
	    ldouble/ellpkl.c
	    ldouble/expl.c
	    ldouble/expx2l.c
	    ldouble/exp10l.c
	    ldouble/exp2l.c
	    ldouble/floorl.c
	    ldouble/gammal.c
	    ldouble/gdtrl.c
	    ldouble/gelsl.c
	    ldouble/ieee.c
	    ldouble/igamil.c
	    ldouble/igaml.c
	    ldouble/incbetl.c
	    ldouble/incbil.c
	    ldouble/isnanl.c
	    ldouble/j0l.c
	    ldouble/j1l.c
	    ldouble/jnl.c
	    ldouble/logl.c
	    ldouble/log10l.c
	    ldouble/log2l.c
	    ldouble/nbdtrl.c
	    ldouble/ndtril.c
	    ldouble/ndtrl.c
	    ldouble/pdtrl.c
	    ldouble/polevll.c
	    ldouble/powl.c
	    ldouble/powil.c
	    ldouble/sinl.c
	    ldouble/sinhl.c
	    ldouble/sqrtl.c
	    ldouble/stdtrl.c
	    ldouble/tanl.c
	    ldouble/tanhl.c
	    ldouble/unityl.c
	    ldouble/ynl.c
	    misc/cephes_misc.h
	    misc/mconf.h
	    misc/beta.c
	    misc/chbevl.c
	    misc/dawsn.c
	    misc/ei.c
	    misc/expn.c
	    misc/fac.c
	    misc/fresnl.c
	    misc/mtherr.c
	    misc/planck.c
	    misc/polevl.c
	    misc/polylog.c
	    misc/rgamma.c
	    misc/shichi.c
	    misc/sici.c
	    misc/simpsn.c
	    misc/spence.c
	    misc/zeta.c
	    misc/zetac.c
	    polyn/cephes_polyn.h
	    polyn/mconf.h
	    polyn/euclid.c
	    polyn/polmisc.c
	    polyn/polrt.c
	    polyn/polyn.c
	    polyn/revers.c
	    c9x-complex/cephes_cmplx.h
	    c9x-complex/mconf.h
	    c9x-complex/cmplx.c
	    c9x-complex/cgamma.c
	    c9x-complex/cpolylog.c
           )

# This was an interesting disaster!
#	    cmath/sincos.c
# I renamed the function sincosdg because it takes degrees.

